--- a/react-ts/src/Layouts/HomeLayout.css
+++ b/react-ts/src/Layouts/HomeLayout.css
@@ -1,6 +1,13 @@
 .home-layout{
     background-color: #FFFFFF;
-    padding: 6%;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-layout img{
+    width: 185px;
+    margin-top: 2rem;
+    margin-left: 2rem;
 }
 
 .baseline{
@@ -8,4 +15,19 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+
+@media (min-width: 767px){
+    .home-layout{
+        align-items: center;
+        background-color: #FAFAFA;
+        min-height: 100vh;
+        width: 100vw;
+    }
+
+    .home-layout img{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        margin-left: 0;
+    }
 }
